--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-pdf/renderer": "^3.4.2",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "events": "^3.3.0",
     "html-to-image": "^1.11.11",
+    "html-to-pdfmake": "^2.5.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "pdfmake": "^0.2.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
