--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,16 @@
     "html-to-image": "^1.11.11",
     "html-to-pdfmake": "^2.5.6",
     "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "pdfmake": "^0.2.10",
     "prop-types": "^15.8.1",
+    "puppeteer": "^22.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.22.3",
     "react-to-print": "^2.15.1",
