--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
     DataBase_URL = mongodb+srv://king7479k:cPxG7Br2f2btnmyf@cluster0.td7ml3e.mongodb.net/Auth
     JWT_SECRET= omsonani
+    PORT = 3002
