--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^2.1.3",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@react-pdf/renderer": "^3.4.2",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
